# Watchly

./: .env.example  .gitignore  README.md  beamup.json  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
app/: config.py  utils.py
app/api/: main.py
app/api/endpoints/: announcement.py  catalogs.py  manifest.py  streams.py  tokens.py
app/core/: app.py  config.py
app/services/: catalog.py  catalog_updater.py  recommendation_service.py  stremio_service.py  tmdb_service.py  token_store.py
static/: index.html  script.js  style.css
